// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long.md 1`] = `
[^hello]: this is a long long long long long long long long long long long long long paragraph.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[^hello]: this is a long long long long long long long long long long long long long paragraph.

`;

exports[`simple.md 1`] = `
[^hello]: world
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[^hello]: world

`;
